MDEV-36863 InnoDB: Failing assertion: !block->n_hash_helps after failing to shrink innodb_buffer_pool_size

buf_pool_t::resize(): After failing to shrink the buffer pool,
clear any adaptive hash index fields for blocks that were restored
from buf_pool.withdrawn to buf_pool.free, so that they will be in
the expected state when the blocks will be allocated later.
This fixes a logic conflict between
commit 4dcb1b575b6cc533f68b98ea1f83cec275534972 (MDEV-35049) and
commit b6923420f326ac030e4f3ef89a2acddb45eccb30 (MDEV-29445).